# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "addition"
version = "0.1.0"   
description = "A simple addition function"
authors = [
    { name = "PRAMOD NAIK", email = "pammunaik99.51solution@gmail.com" }
]
dependencies = []
